--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -38,7 +38,7 @@
         
         <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        314-314-3144<strong></p>
+        314-314-3144</strong></p>
 		</div>       
 
     <div id="topnav">
