--- a/HVAC_Site.ste/Pages/Services.html
+++ b/HVAC_Site.ste/Pages/Services.html
@@ -37,7 +37,7 @@
         </div>
 <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        314-314-3144<strong></p>
+        314-314-3144</strong></p>
 		</div>  
     <div id="topnav" class="wrap">
     	<ul id="nav"> 
