--- a/HVAC_Site.ste/Pages/Services.html
+++ b/HVAC_Site.ste/Pages/Services.html
@@ -5,7 +5,7 @@
 <!-- InstanceBeginEditable name="code" -->
   
 <head>
-<title>Project 1</title>
+<title>BunetaHVAC</title>
 <link href="../CSS/Stylesheet.css" rel="stylesheet">
 <style type="text/css">
 #top #topnav #nav li a {
