--- a/HVAC_Site.ste/Pages/About.html
+++ b/HVAC_Site.ste/Pages/About.html
@@ -82,18 +82,19 @@
                          
              <div id="box1">
 
+<div id="box1"
 <div class="card">
   <img src="../Images/Extra/Da.PNG" width="265" height="370" alt="Clark" style="width:100%">
   <h1>Clark Buneta</h1>
-  <p class="title">CEO & Founder</p>
-  <p>Example University</p>
+  <p class="title">CEO and Founder</p>
+  <p>University</p>
   <a href="#"><i class="fa fa-dribbble"></i></a> 
   <a href="#"><i class="fa fa-twitter"></i></a> 
   <a href="#"><i class="fa fa-linkedin"></i></a> 
   <a href="#"><i class="fa fa-facebook"></i></a> 
   <p><button>Contact</button></p>
 </div>
-
+ 
 </div>
 
 
