--- a/HVAC_Site.ste/Pages/About.html
+++ b/HVAC_Site.ste/Pages/About.html
@@ -120,8 +120,8 @@
             
 
 	<div id=footer>
-    		<p>&copy;Copyright 20XX | All Rights Reserved | Company Name 1234 Main Street St. Louis Missouri 6312X | 123.456.7890</p>
-    </div>
+    		<p>&copy;Copyright 2019 | All Rights Reserved | Buneta Heating and Cooling St. Louis Missouri 63128 | 314.314.3144</p>
+</div>
   
 
 </body>
