--- a/HVAC_Site.ste/Pages/Blog.html
+++ b/HVAC_Site.ste/Pages/Blog.html
@@ -87,7 +87,7 @@ href="https://www.facebook.com/pages/category/community/Buneta-Heating-and-Cooli
             <p><i>here would be the embedded facebook page if facebook wasn't blocked</i></p>
 
 	<div id=footer>
-    		<p>&copy;Copyright 20XX | All Rights Reserved | Company Name 1234 Main Street St. Louis Missouri 6312X | 123.456.7890</p>
+    	    		<p>&copy;Copyright 2019 | All Rights Reserved | Buneta Heating and Cooling St. Louis Missouri 63128 | 314.314.3144</p>
     </div>
   
 
