--- a/HVAC_Site.ste/Pages/Gallery.html
+++ b/HVAC_Site.ste/Pages/Gallery.html
@@ -35,9 +35,9 @@
     	<div id="logo">
         	<img src="../Images/Logo/BHAC Logo.PNG" height="250px" width="320px">
         </div>
-<div id="phone">
-        <p><b>For Services or Questions Call<br>
-        314-314-3144</b></p>
+        <div id="phone">
+        <p><strong> For Services or Questions Call<br>
+        <img src="../Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
 		</div>  
     <div id="topnav" class="wrap">
     	<ul id="nav"> 
