--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -35,12 +35,10 @@
     	<div id="logo">
         	<img src="../Images/Logo/BHAC Logo.PNG" height="250px" width="320px">
         </div>
-        
-        <div id="phone">
+             <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        314-314-3144</strong></p>
-		</div>       
-
+        <img src="../Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
+		</div> 
     <div id="topnav">
     	<ul id> 
         	<li><a href="#">Welcome</a></li> 
