--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -33,7 +33,7 @@
 
 	<div id="top">
     	<div id="logo">
-        	<img src="../Images/Logo/BHAC Logo.PNG" height="250px" width="320px">
+        	<img src="HVAC_Site.ste/Images/Extra/WordArtNumber.PNG" height="250px" width="320px">
         </div>
              <div id="phone">
         <p><strong> For Services or Questions Call<br>
