--- a/HVAC_Site.ste/Pages/Contact.html
+++ b/HVAC_Site.ste/Pages/Contact.html
@@ -35,9 +35,9 @@
     	<div id="logo">
         	<img src="HVAC_Site.ste/Images/Extra/WordArtNumber.PNG" height="250px" width="320px">
         </div>
-        <div id="phone">
+             <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        <img src="HVAC_Site.ste/Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
+        <img src="../Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
 		</div> 
     <div id="topnav" class="wrap">
     	<ul id="nav"> 
