--- a/HVAC_Site.ste/Pages/Contact.html
+++ b/HVAC_Site.ste/Pages/Contact.html
@@ -3,7 +3,6 @@
 <html><!-- InstanceBegin template="/Templates/Maintemplate.dwt" codeOutsideHTMLIsLocked="false" --> 
 
 <!-- InstanceBeginEditable name="code" -->
-  
 <head>
 <title>BunetaHVAC</title>
 <link href="../CSS/Stylesheet.css" rel="stylesheet">
@@ -33,9 +32,9 @@
 
 	<div id="top">
     	<div id="logo">
-        	<img src="HVAC_Site.ste/Images/Extra/WordArtNumber.PNG" height="250px" width="320px">
+        	<img src="../Images/Logo/BHAC Logo.PNG" height="250px" width="320px">
         </div>
-             <div id="phone">
+        <div id="phone">
         <p><strong> For Services or Questions Call<br>
         <img src="../Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
 		</div> 
