--- a/HVAC_Site.ste/Pages/About.html
+++ b/HVAC_Site.ste/Pages/About.html
@@ -37,7 +37,7 @@
         </div>
         <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        <img src="HVAC_Site.ste/Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
+        314-314-3144<strong></p>
 		</div>  
     <div id="topnav" class="wrap">
     	<ul id="nav"> 
