--- a/HVAC_Site.ste/Pages/Contact.html
+++ b/HVAC_Site.ste/Pages/Contact.html
@@ -36,7 +36,7 @@
         </div>
         <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        <img src="../Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
+        314-314-3144<strong></p>
 		</div> 
     <div id="topnav" class="wrap">
     	<ul id="nav"> 
