--- a/HVAC_Site.ste/Pages/FAQ.html
+++ b/HVAC_Site.ste/Pages/FAQ.html
@@ -39,7 +39,7 @@
         <p><strong> For Services or Questions Call<br>
         314-314-3144<strong></p>
 		</div> 
-    <div id="topnav" class="wrap" class="sticky">
+    <div id="topnav" class="sticky">
     	<ul id="nav"> 
         
         
