--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -37,7 +37,7 @@
         </div>
              <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        314-314-3144<strong></p>
+        <img src="../Images/Extra/WordArtNumber.PNG" width="240px" height="42px"><strong></p>
 		</div> 
     <div id="topnav" class="sticky">
     	<ul id> 
