--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -37,7 +37,7 @@
         </div>
              <div id="phone">
         <p><strong> For Services or Questions Call<br>
-        314-314-3144<strong></p>
+		<h1 class="number">314-314-3144</h1><strong></p>
 		</div> 
     <div id="topnav" class="sticky">
     	<ul id> 
