--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -6,7 +6,7 @@
   
 <head>
 <title>BunetaHVAC</title>
-	<link rel="shortcut icon" type="image/png" href="HVAC_Site.ste/Images/favicon.ico"/>
+	<link rel='shortcut icon' type='image/x-icon' href='HVAC_Site.ste/Images/favicon.ico' />
 <link href="../CSS/Stylesheet.css" rel="stylesheet">
 <style type="text/css">
 #top #topnav #nav li a {
