--- a/HVAC_Site.ste/Pages/Index.html
+++ b/HVAC_Site.ste/Pages/Index.html
@@ -5,7 +5,7 @@
 <!-- InstanceBeginEditable name="code" -->
   
 <head>
-	<link rel="shortcut icon" type="image/x-icon" href="HVAC_Site.ste/Images/favicon.ico">
+	<link rel="shortcut icon" type="image/icon" href="HVAC_Site.ste/Images/favicon.ico">
 <title>BunetaHVAC</title>
 	
 <link href="../CSS/Stylesheet.css" rel="stylesheet">
