--- a/HVAC_Site.ste/Pages/Services.html
+++ b/HVAC_Site.ste/Pages/Services.html
@@ -87,7 +87,7 @@
  
 </div>   
                            <div id="box3" class="work">
-         <img src="../Images/Extra/Capture.PNG" width="450px" height="400xp"     >      
+         <img src="../Images/Extra/Capture.PNG" width="450px" height="400xp" class="wpframe"    >      
       				</div>
 </div>
       
