--- a/HVAC_Site.ste/Pages/Services.html
+++ b/HVAC_Site.ste/Pages/Services.html
@@ -33,7 +33,7 @@
 
 	<div id="top">
     	<div id="logo">
-        	<img src="../Images/Logo/BHAC Logo.PNG" height="250px" width="320px">
+        	<img src="../Images/Logo/BHAC Logo.PNG" height="250px" width="320px" >
         </div>
         <div id="phone">
         <p><strong> For Services or Questions Call<br>
@@ -87,7 +87,7 @@
  
 </div>   
                            <div id="box3" class="work">
-         <img src="../Images/Extra/Capture.PNG" width="450px" height="400xp" class="wpframe"    >      
+         <img src="../Images/Extra/Capture.PNG" width="450px" height="400xp" class="wpframe" id="bump"    >      
       				</div>
 </div>
       
