--- a/HVAC_Site.ste/Pages/Contact.html
+++ b/HVAC_Site.ste/Pages/Contact.html
@@ -95,7 +95,7 @@
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Try to be as specific as you can..." style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
+    < value="Submit">
 
   </form>
 </div>
